YUR-171: Implemented PR comments.