@@ -1,7 +1,9 @@
-package com.yurjinia.common.util.locale;
+package com.yurjinia.common.locale;
 
+import com.yurjinia.common.locale.constants.LanguageConstants;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.web.servlet.LocaleResolver;
 
@@ -11,13 +13,13 @@ public class CommonLocaleResolver implements LocaleResolver {
 
     @Override
     public Locale resolveLocale(HttpServletRequest request) {
-        String langParam = request.getParameter("lang");
+        String langParam = request.getParameter(LanguageConstants.LANG_PARAM);
 
-        if (!langParam.isBlank()) {
-            return SupportedLanguage.getLocaleByCode(langParam);
+        if (StringUtils.isBlank(langParam)) {
+            return request.getLocale();
         }
 
-        return request.getLocale();
+        return SupportedLanguage.getLocaleByCode(langParam);
     }
 
     @Override
